@@ -64,6 +64,10 @@ Core and builtins
 
 Extension modules
 
+- The bsddb.*open functions can now take 'None' as a filename. 
+  This will create a temporary in-memory bsddb that won't be
+  written to disk. 
+
 - posix.mknod was added.
 
 - The locale module now exposes the C library's gettext interface.
